modify index and add test.html

--- a/test.html
+++ b/test.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <title>
-  hi
+  hi2
 </title>
 </head>
 <body bgcolor=c0c0c0>
-<h1>hello</h1>
+<h1>welcome</h1>
 <p>lasjdflkasjdfljsad;fjsadk;jf</p>
-<a href="test.html">Test page</a>
+<a href="index.html">Go Back</a>
 
 </body>
 </html>
